# pubsub_problem

./: WORKSPACE
api/service/: BUILD.bazel  service.proto
server/: BUILD.bazel  server.go
