load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "server",
    visibility = ["//visibility:private"],
    deps = [
        "//api/service:go_default_library",
        #"@com_google_cloud_go//pubsub:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    importpath = "server",
    visibility = ["//visibility:public"],
)
